--- a/airbyte-integrations/connectors/source-zoho-crm/metadata.yaml
+++ b/airbyte-integrations/connectors/source-zoho-crm/metadata.yaml
@@ -16,7 +16,7 @@ data:
     pypi:
       enabled: true
       packageName: airbyte-source-zoho-crm
-  registryOverrides:
+  registries:
     cloud:
       enabled: true
     oss:
@@ -27,10 +27,6 @@ data:
     - language:python
     - cdk:python
   connectorTestSuitesOptions:
-    - suite: liveTests
-      testConnections:
-        - name: zoho-crm_config_dev_null
-          id: 0000da93-11f4-4e8f-8ede-42b9789b974d
     - suite: unitTests
     - suite: integrationTests
       testSecrets:
